# cellmap-n5-to-zarr

./: .gitignore  README.md  cellmap-n5-to-zarr-py11.environment.yml  pyproject.toml
attrs/: _recon-1_em_fibsem-uint8_s1.txt  dask_dashboard_link.txt
src/: cellmap_layout.py  copy_data.py  to_cellmap_zarr.py  zarr_attrs_multiscales.py
tests/: test_cellmap_layout.py
