[tool.poetry]
name = "zarr-normalization-cellmap"
version = "0.1.0"
description = ""
authors = ["Yurii Zubov <zubov452@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.6,<3.13"
zarr = "^2.16.1"
dask = "^2023.9.2"
numpy = "^1.26.0"
pydantic-zarr = "^0.4.0"
numcodecs = "^0.11.0"
dask-jobqueue = "^0.8.2"
natsort = "^8.4.0"
bokeh = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
